# sai

./: .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  README.md  biome.jsonc  eslint.config.js  package.json  pnpm-lock.yaml  prettier.config.js  vite.config.ts
docs/: TODO.md  (+3 more)
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: beta.json  default.json
src-tauri/src/: analysis.rs  cache.rs  commands.rs  csv.rs  domain.rs  dto.rs  excel.rs  features.rs  infra.rs  lib.rs  main.rs  presentation.rs  r.rs  table.rs  temp_store.rs  types.rs  usecase.rs
src-tauri/src/analysis/: log.rs  runner.rs  sort.rs  types.rs
src-tauri/src/bootstrap/: state.rs
src-tauri/src/commands/: analysis.rs  analysis_log.rs  data.rs  excel.rs  export.rs
src-tauri/src/domain/: analysis.rs  input.rs
src-tauri/src/domain/analysis/: error.rs  method.rs  model.rs  rule.rs
src-tauri/src/domain/analysis_log/: model.rs
src-tauri/src/domain/input/: numeric.rs  source_kind.rs  string_mixed.rs  table.rs
src-tauri/src/features/: analysis.rs  data.rs
src-tauri/src/features/analysis/: log.rs  options.rs  runner.rs  types.rs
src-tauri/src/features/data/: csv.rs  data_source.rs  excel.rs  numeric.rs  table.rs  types.rs
src-tauri/src/infra/: analysis_log.rs  cache.rs  r.rs  reader.rs
src-tauri/src/infra/analysis_log/: jsonl_repository.rs  session_repository.rs
src-tauri/src/infra/cache/: dataset_cache.rs  repository.rs
src-tauri/src/infra/r/: analyzer.rs  process.rs  runner.rs  temp_json.rs
src-tauri/src/infra/reader/: csv.rs  xlsx.rs
src-tauri/src/presentation/: commands.rs
src-tauri/src/usecase/: analysis.rs  analysis_log.rs  import.rs
(+213 files in other folders)
